--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.6.0
+  riverpod_annotation: ^3.0.3
+  riverpod_generator: ^3.0.3
+  flutter_riverpod: ^3.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
